# gicp_ros2

./: CMakeLists.txt  README.md  package.xml
config/: gicp.rviz
launch/: gicp_launch.py
src/: gicp.cpp  viewer.cpp
